# coactivation-manifolds

./: .gitignore  CLAUDE.md  CODEX.md  DESIGN.md  README.md  package-lock.json  pyproject.toml
parts-of-speech/: README.md  inspect_probe.py  main.py  plot_confusion_subset.py  pyproject.toml  requirements.txt  train_probe.py
parts-of-speech-2/: analyze_probe_geometry.py  brier_score.py  classify_resampled_pos.py  distill_probe_from_resamples.py  generate_activations.py  generate_spacy_activations.py  load_dataset_test.py  output_with_spacy_pos.jsonl  print_classifications.py  probe.joblib  probe_test.joblib  probe_vs_spacy.jsonl  resample_spacy_tokens.py  resample_uncertain_tokens.py  resample_uncertain_tokens_design.md  summarize_probe_vs_spacy.py  test_resamples.jsonl  train_probes.py  train_spacy_probe.py  utils.py
parts-of-speech/parts-of-speech/runs/google-gemma-2-2b/layer_12/: metrics.json
parts-of-speech/parts-of-speech/runs/google-gemma-2-2b/layer_16/: metrics.json
parts-of-speech/parts-of-speech/runs/google-gemma-2-2b/layer_20/: metrics.json
parts-of-speech/parts-of-speech/runs/google-gemma-2-2b/layer_8/: metrics.json
parts-of-speech/pos_probe/: __init__.py  activations.py  constants.py  data.py  plots.py  probe.py  sklearn_trainer.py  utils.py
scripts/: 0_generate_activations.py  0_generate_activations_parallel.py  1_compute_coactivations.py  2_plot_jaccard_percentiles.py  3_prune_components.py  4_plot_component_pca.py  add_token_snippets.py  check_decoder_norms.py  merge_worker_outputs.py  plot_specific_cluster.py  profile_activation_pipeline.py  profile_coactivation.py  run_logging.py  visualize_3D_component_plots.py  visualize_transformer_pca.py
tests/: test_activation_io.py
visualize_probability_simplex/: __init__.py  collect_joint_snippets.py  plot_probability_simplex.py  run_between_triplet.sh  score_definitions.py
(+38 files in other folders)
