[project]
name = "coactivation-manifolds"
version = "0.1.0"
description = "Coactivation manifold experiments"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.39",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "numpy>=1.26",
  "pyarrow>=15.0",
  "datasets>=2.18",
  "tqdm>=4.66",
  "scikit-learn>=1.4",
  "sae-lens>=0.3.0",
  "pytest>=8.4.2",
  "python-dotenv>=1.0",
  "zstandard>=0.25.0",
  "matplotlib>=3.9",
  "ipykernel>=7.1.0",
  "jupyter>=1.1.1",
  "seaborn>=0.13.2",
  "plotly>=6.3.0",
  "spacy>=3.8.8",
  "simplejson>=3.20.2",
  "jsonlines>=4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "word-disambiguation",
]
