[project]
name = "parts-of-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.27",
    "conllu>=6.0.0",
    "datasets<4.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "safetensors>=0.4",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.39",
    "zstandard>=0.25.0",
]
